--- a/index.html
+++ b/index.html
@@ -43,10 +43,17 @@
        <li>Currently a Senior at Hope High School located on 324 Hope Street in Providence, Rhode Island. On track to graduate in 2020.
        <li>Has taken and passed a Computer Operating Systems class at CCRI worth 4 credits   
      </ul>
-
- 
     
-    <h4>
+    <h3>Special Awards</h3>
+     <ul>
+       <li>Has received an Award from the Executive Director Of Teaching And Learning Of The Providence School District regarding his participation in the Keys For Learning Project.</li>
+       <li>Has received a JROTC (Junior Reserve Officers Training Corps) Award for student government from Chris Corbett regarding his participation in the Keys For Learning Project.</li>
+       <li>Has received an Award for winning a JROTC Essay Contest (With a prize of $100)</li>
+       <li>Has multiple awards for honours in Hope High School.</li>
+
+  <h3>Contact Information<h3>
+    <h4> robertdesilets2@gmail.com 
     <p>
+
 </body>
 </html>
