--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   
   <link rel="stylesheet" type="text/css" href="style.css">
 }
-  </style>
+  V<meta name="google-site-verification" content="google-site-verification: google14910130d3b79d88.html">
 </head>
 <body>
 
