--- a/index.html
+++ b/index.html
@@ -8,15 +8,24 @@
   
   <link rel="stylesheet" type="text/css" href="style.css">
 }
-  V<meta name="google-site-verification" content="google-site-verification: google14910130d3b79d88.html">
+  </style>
 </head>
 <body>
 
     <div>
    <header>
+  
   <img class="left-logo" src="https://1.bp.blogspot.com/-o_b4aR_NhL4/XVrhOLdy7lI/AAAAAAAACP8/Oy1tWYxH3uIwG_gf0BP2xtL5cNq94HAxACLcBGAs/s1600/Rob-Logo.png" alt="Red Logo"> 
-    <img class="main-logo" src="https://1.bp.blogspot.com/-mvEJVF6hucs/XVrjA4Kfv7I/AAAAAAAACQM/vSZr8zsbKiM5yYa-oatGSvHeywPMuhy8QCEwYBhgL/s1600/Robert-Shape.png" alt="Black Logo with my name"> 
-    <img class="right-logo" src="https://1.bp.blogspot.com/-o_b4aR_NhL4/XVrhOLdy7lI/AAAAAAAACP8/Oy1tWYxH3uIwG_gf0BP2xtL5cNq94HAxACLcBGAs/s1600/Rob-Logo.png" alt="Red Logo">
+  
+  <img class="main-logo" src="https://1.bp.blogspot.com/-mvEJVF6hucs/XVrjA4Kfv7I/AAAAAAAACQM/vSZr8zsbKiM5yYa-oatGSvHeywPMuhy8QCEwYBhgL/s1600/Robert-Shape.png" alt="Black Logo with my name"> 
+    
+  
+  <img class="right-logo" src="https://1.bp.blogspot.com/-o_b4aR_NhL4/XVrhOLdy7lI/AAAAAAAACP8/Oy1tWYxH3uIwG_gf0BP2xtL5cNq94HAxACLcBGAs/s1600/Rob-Logo.png" alt="Red Logo">
+
+  <img src="Robert Desilets And Mayor.jpg" Alt="Picture Of Robert Desilets" 
+  
+  
+
   </header> 
   <main> 
    
@@ -36,35 +45,47 @@
 
     <h3>Skills</h3>
      <ul> 
-       <li>Can assemble desktop PCs.</li> <br> 
-       <li>Can troubleshoot desktop PCs and fix minor issues.</li> <br>
-       <li>Very familiar with basic programs such as Microsoft Office, Google Slides,Google Docs, and Google Drive.</li> <br>
-       <li>Red Cross Certified (Can use an AED and perform basic medical treatment).</li> <br>
+       <li>Can assemble desktop PCs.</li>  
+       <li>Can troubleshoot desktop PCs and fix minor issues.</li> 
+       <li>Very familiar with basic programs such as Microsoft Office, Google Slides,Google Docs, and Google Drive.</li>
+       <li>Red Cross Certified (Can use an AED and perform basic medical treatment).</li> 
     </ul>
 
     <h3>Experience</h3>
      <ul>
-       <li>City of Providence Elite Coders/Career Devs HTML/CSS Internship</li> <br>
-       <li>Participated in and is currently participating in the Keys For Learning project that consists of more than 30 teachers and administrators from schools across Providence, Rhode Island since August 2016.</li> <br>
-       <li>Works on a personal desktop at home.</li> <br>
+       <li>City of Providence Elite Coders/Career Devs HTML/CSS Internship</li> 
+       <li>Participated in and is currently participating in the Keys For Learning project that consists of more than 30 teachers and administrators from schools across Providence, Rhode Island since August 2016.</li>
+       <li>Works on a personal desktop at home.</li> 
     </ul>
 
     <h3>Education</h3>
      <ul>
-       <li>Currently a Senior at Hope High School located on 324 Hope Street in Providence, Rhode Island. On track to graduate in 2020. </li><br>
-       <li>Has taken and passed a Computer Operating Systems class at CCRI worth 4 credits.</li> <br>   
+       <li>Currently a Senior at Hope High School located on 324 Hope Street in Providence, Rhode Island. On track to graduate in 2020. </li>
+       <li>Has taken and passed a Computer Operating Systems class at CCRI worth 4 credits.</li>    
      </ul>
   
   <h3>Special Awards</h3>
      <ul>
-       <li>Has received an Award from the Executive Director Of Teaching And Learning Of The Providence School District regarding his participation in the Keys For Learning Project.</li> <br> 
-       <li>Has received a JROTC (Junior Reserve Officers Training Corps) Award for student government from Chris Corbett regarding his participation in the Keys For Learning Project.</li> <br> 
-       <li>Has received an Award for winning a JROTC Essay Contest (With a prize of $100)</li> <br> 
-       <li>Has multiple awards for honours in Hope High School.</li> <br> 
+       <li>Has received an Award from the Executive Director Of Teaching And Learning Of The Providence School District regarding his participation in the Keys For Learning Project.</li> 
+       <li>Has received a JROTC (Junior Reserve Officers Training Corps) Award for student government from Chris Corbett regarding his participation in the Keys For Learning Project.</li>
+       <li>Has received an Award for winning a JROTC Essay Contest (With a prize of $100)</li>  
+       <li>Has multiple awards for honours in Hope High School.</li>  
 </ul>
 </section>
 </main>
 </div>
+
 <!-- Go to www.addthis.com/dashboard to customize your tools --> <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5d5feca3e57dfff9"></script>
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-146371900-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-146371900-1');
+</script>
+
 </body>
 </html>
