--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   
   <img class="right-logo" src="https://1.bp.blogspot.com/-o_b4aR_NhL4/XVrhOLdy7lI/AAAAAAAACP8/Oy1tWYxH3uIwG_gf0BP2xtL5cNq94HAxACLcBGAs/s1600/Rob-Logo.png" alt="Red Logo">
 
-  <img src="Robert Desilets And Mayor.jpg" Alt="Picture Of Robert Desilets" 
+  <img src="Robert Desilets And Mayor.jpg" Alt="Picture Of Robert Desilets"> 
   
   
 
