--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   
   <img class="right-logo" src="https://1.bp.blogspot.com/-o_b4aR_NhL4/XVrhOLdy7lI/AAAAAAAACP8/Oy1tWYxH3uIwG_gf0BP2xtL5cNq94HAxACLcBGAs/s1600/Rob-Logo.png" alt="Red Logo">
 
-  <img src="Robert Desilets And Mayor.jpg" Alt="Picture Of Robert Desilets"> 
+  
   
   
 
@@ -34,7 +34,13 @@
      
   <h2>Who Am I?</h2>
     
-  <p class="paragraph">A very open, competent thinker who is familiar with a few of the world's various computer technologies. A person with a knack for always wanting to learn more and a person who has the vivid dream of being able to push the boundaries of what’s possible. A person who strives to improve at every conceivable moment and has the motivation to do so. 
+  <p class="paragraph">A very open, competent thinker who is familiar with a few of the world's various computer technologies. A person with a knack for always wanting to learn more and a person who has the vivid dream of being able to push the boundaries of what’s possible. A person who strives to improve at every conceivable moment and has the motivation to do so.
+
+  <h4> Here's A Picture Of Robert Desilets Standing On The Right Of Providence Rhode Island Mayor, Jorge Elorza at the Roger Williams Park Casino </h4>
+  
+  <img src="Robert Desilets And Mayor.jpg" Alt="A Picture of Robert Desilets and Mayor Elorza at the Roger Williams Park Casino">
+
+
   
   </section>
   
@@ -69,7 +75,15 @@
        <li>Has received an Award from the Executive Director Of Teaching And Learning Of The Providence School District regarding his participation in the Keys For Learning Project.</li> 
        <li>Has received a JROTC (Junior Reserve Officers Training Corps) Award for student government from Chris Corbett regarding his participation in the Keys For Learning Project.</li>
        <li>Has received an Award for winning a JROTC Essay Contest (With a prize of $100)</li>  
-       <li>Has multiple awards for honours in Hope High School.</li>  
+       <li>Has multiple awards for honours in Hope High School.</li> 
+     </ul>
+
+  <h3> Contact Information</h3>
+  <ul>
+  <li> <link> Email: robertdesilets2@gmail.com </link> </li>
+  <li> Phone Number: 401-648-5673 </li>
+  </ul>
+
 </ul>
 </section>
 </main>
