--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
 
   <h4> Here's A Picture Of Robert Desilets Standing On The Right Of Providence Rhode Island Mayor, Jorge Elorza at the Roger Williams Park Casino </h4>
   
-  <img src="Robert Desilets And Mayor.jpg" Alt="A Picture of Robert Desilets and Mayor Elorza at the Roger Williams Park Casino">
+  <img class="formal-photo" src="Robert Desilets And Mayor.jpg" alt="A Picture of Robert Desilets and Mayor Elorza at the Roger Williams Park Casino">
+  
 
 
   
